--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -1,8 +1,8 @@
 .header {
 
     width: 100%;
-    height: 80px;
-    line-height: 80px;
+    height: 60px;
+    line-height: 10px;
 
 }
 
@@ -13,15 +13,16 @@
 }
 
 .logo img {
-    width: calc(100% - 60%);
+    width: calc(100% - 70%);
     object-fit: contain;
+    margin-bottom: 20px;
 }
 
 .logo h5 {
     font-size: 1rem;
     font-weight: 600;
     color: #212245;
-    margin-top: -10px;
+    margin-top: -20px;
    
 }
 
@@ -55,7 +56,7 @@
 
 .cart__badge {
     position: absolute;
-    top: 15px;
+    top: -15px;
     right: -10px;
     background-color: #da2020;
     color: #fff;
@@ -77,8 +78,9 @@
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 9999;
     box-shadow: 5px 5px 15px -5px #fde4e4;
-
+    background: #fff;
 }
 
 @media only screen and (max-width:992px) {
@@ -143,9 +145,12 @@
         height: 50%;
         line-height: 50px;
     }
-
-    .logo h5 {
+    .logo img{
         margin-top: 0px;
+
+    }
+    .logo h5 {
+        margin-top: -11px;
         margin-bottom: 5px;
     }
 }
