--- a/src/index.css
+++ b/src/index.css
@@ -41,4 +41,13 @@ h2 {
 
 section {
   padding: 60px 0px;
+  margin: 0px;
+}
+@media screen and (max-width:786px) {
+  section{
+  padding: 40px 0px;
+  }
+  h1,h2{
+  font-size: 1.5rem;
+  }
 }
